syntax = "proto3";

package yandex.cloud.priv.datasphere.v2;

import "google/protobuf/empty.proto";
import "yandex/cloud/priv/validation.proto";
import "google/protobuf/wrappers.proto";


option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datasphere/v2;datasphere";
option java_outer_classname = "DSCMS";
option java_package = "yandex.cloud.priv.datasphere.v2yds";

service CommunityService {

  rpc  Activate (ActivateCommunityRequest) returns (google.protobuf.Empty);

  rpc Deactivate (DeactivateCommunityRequest) returns (google.protobuf.Empty);

  rpc Exists (CommunityExistsRequest) returns (google.protobuf.BoolValue);

  rpc HasAccessBindingBilling (AccessBindingBillingRequest) returns (AccessBindingBillingResponse);
}


message ActivateCommunityRequest {
  repeated string community_id = 1;
}

message DeactivateCommunityRequest {
  repeated string community_id = 1;
}

message CommunityExistsRequest {
  string community_id = 1 [(required) = true];
}

message AccessBindingBillingRequest {
  string community_id = 1 [(required) = true];
  string user_id = 2 [(required) = true];
}

message AccessBindingBillingResponse {
  bool access = 1;
}
